2001-08-29  Sam Steingold  <sds@gnu.org>

	more ANSI compliance pathnames wrt HOSTS & VERSIONS
	* constobj.d (semicolon_string, zero_string): added for the
	benefit of VERSION pathname component
	* pathname.d (PARSE-NAMESTRING): fixed HOST handling
	(pathname_version_maybe, pathname_host_maybe,
	pathname_device_maybe): new convenience macros
	(subdir_namestring_parts): take an additional logp arg
	(host_namestring_parts, directory_namestring_parts):
	handle logical pathnames
	(nametype_namestring_parts): separate version with ".", not ";"
	(directory_namestring): do not add host
	(FILE-NAMESTRING, DIRECTORY-NAMESTRING, HOST-NAMESTRING,
	ENOUGH-NAMESTRING, NAMESTRING): handle logical pathnames
	(defaults_pathname): permit logical *DEFAULT-PATHNAME-DEFAULTS*
	(merge_dirs): new function
	(MERGE-PATHNAMES): use it; handle versions better
	(MAKE-PATHNAME): handle defaults early; pass UNBOUND instead of
	NIL to MERGE-PATHNAMES as default version

2001-08-27  Sam Steingold  <sds@gnu.org>

	* makemake.in (testsuite): add on all platforms

2001-08-27  Sam Steingold  <sds@gnu.org>

	win32gcc names libraries libFOO.a and not FOO.LISP
	* makemake.in (LIB_TYPE): new variable, used instead of $HOS
	in creating library dependecies

2001-08-27  Sam Steingold  <sds@gnu.org>

	fixed bug #455559
	* defstruct.lisp (ds-arg-default): when ARG is a list and default
	is NIL, return (ARG NIL) and not (ARG)
	(ds-arg-with-default): pass VAR instead of ARG to DS-ARG-DEFAULT

2001-08-25  Bruno Haible  <haible@clisp.cons.org>

	Upgrade to autoconf-2.52.
	* autoconf/autoconf: Upgrade to autoconf-2.52.
	* autoconf/acgeneral.m4: Remove file.
	* autoconf/acspecific.m4: Remove file.
	* autoconf/autoconf.m4f: New file, from autoconf-2.52.
	* autoconf/aclocal.m4: Require autoconf-2.52.
	(CL_AS_UNDERSCORE): Avoid stupid autoconf-2.52 error "possibly
	undefined macro: AS_UNDERSCORE".
	(CL_CONFIG_SUBDIRS): Rewritten.
	(CL_CANONICAL_HOST): Call AC_CANONICAL_HOST. Don't cache the result,